# Auge.GIS

./: Auge.GIS.sln  AugeGIS.sln  Makefile.am  README.md  autogen.sh  configure.ac
Brush/src/: Base.h  Canvas.cpp  Connection.cpp  Connection.h  DataSourceManager.cpp  DataSourceManager.h  Enum.h  Envelope.cpp  Envelope.h  FeatureLayer.cpp  FeatureLayer.h  FeatureSet.cpp  FeatureSet.h  FeatureType.cpp  FeatureType.h  Field.cpp  Filter.cpp  Filter.h  Geometry.h  Layer.cpp  Layer.h  Makefile.am  Map.cpp  Map.h  MapBrush.h  MapIO.cpp  MapIO.h  MapManager.cpp  MapManager.h  PointSymbolizer.cpp  PointSymbolizer.h  PolygonSymbolizer.h  RasterLayer.cpp  Renderer.cpp  Renderer.h  Rule.cpp  Rule.h  Style.cpp  Style.h  StyleIO.cpp  (+6 more)
Engine/Auth/src/: EnumRoleImpl.cpp  Makefile.am  RoleImpl.cpp  UserImpl.cpp  UserManagerImpl.cpp
Engine/Carto/src/: CanvasImpl.cpp  CapitalMarkerImpl.cpp  CartoFactoryImpl.cpp  CartoManagerImpl.cpp  CircleMarkerImpl.cpp  ColorMapImpl.cpp  ContinentShelfRegionSymbolImpl.cpp  EnumColorMapImpl.cpp  EnumMapImpl.cpp  EnumStyleImpl.cpp  EnumSymbolImpl.cpp  ExternalGraphicImpl.cpp  FeatureLayerImpl.cpp  FeatureStyleImpl.cpp  FerryRegionSymbolImpl.cpp  FillImpl.cpp  FontImpl.cpp  GraphicFillSymbolImpl.cpp  GraphicImpl.cpp  GraphicLayerImpl.cpp  GraphicMarkerSymbolImpl.cpp  GrassLandSymbolImpl.cpp  Label.cpp  LabelSet.cpp  LineLabel.cpp  LineSymbolizerImpl.cpp  Makefile.am  MapImpl.cpp  Maplex.cpp  MarkImpl.cpp  PentagonMarkerImpl.cpp  PointLabel.cpp  PointSymbolizerImpl.cpp  PolygonLabel.cpp  PolygonSymbolizerImpl.cpp  QuadServerLayerImpl.cpp  RailwaySymbolImpl.cpp  RasterLayerImpl.cpp  RasterStyleImpl.cpp  RendererCairo.cpp  (+17 more)
Engine/Carto/test/: CairoTest.cpp  CairoTest.h  CanvasTest.cpp  CanvasTest.h  LabelTest.cpp  LabelTest.h  Makefile.am  MapTest.cpp  MapTest.h  RasterTest.cpp  RasterTest.h  StyleTest.cpp  StyleTest.h  SymbolTest.cpp  SymbolTest.h  test.vcxproj  test.vcxproj.filters
Engine/Core/src/: EnumStringImpl.cpp  EnumValueImpl.cpp  FieldFactoryImpl.cpp  GColor.cpp  GEnvelope.cpp  GErrorImpl.cpp  GFieldImpl.cpp  GFieldsImpl.cpp  GFunction.cpp  GLineStringWKB.cpp  GLoggerImpl.cpp  GMLReaderImpl.cpp  GMLWriterImpl.cpp  GMultiLineStringWKB.cpp  GMultiPointWKB.cpp  GMultiPolygonWKB.cpp  GPointWKB.cpp  GPolygonWKB.cpp  GPropertySet.cpp  GValue.cpp  GeometryDefImpl.cpp  GeometryFactoryImpl.cpp  GeometryUtilImpl.cpp  Makefile.am  RasterIOImpl.cpp  RasterImpl.cpp  Statistics.cpp  StringTokenizer.cpp  WKTReader.cpp  WKTWriter.cpp  XAttribute.cpp  XCdataNode.cpp  XCommentNode.cpp  XContentNode.cpp  XDocument.cpp  XDtd.cpp  XElement.cpp  XEntityReference.cpp  XNode.cpp  XNodeSet.cpp  (+3 more)
Engine/Data/GBeyond/test/: BydTest.cpp  BydTest.h  Makefile.am  Transfer.cpp  Transfer.h  main.cpp  test.vcxproj  test.vcxproj.filters
Engine/Data/GCsvFile/src/: CursorImpl.cpp  DataEngineImpl.cpp  DataSetCvs.cpp  Makefile.am  RowImpl.cpp  WorkspaceCsv.cpp
Engine/Data/GDEngine/src/: ConnectionManagerImpl.cpp  DataEngineManagerImpl.cpp  EnumWorkspaceImpl.cpp  Makefile.am
Engine/Data/GPostgres/pgs2pgs/: Makefile.am  main.cpp  pgs2pgs.vcxproj
Engine/Data/GPostgres/src/: AttributeDataSetPgs.cpp  ConnectionPgs.cpp  DataEngineImpl.cpp  EnumDataSetImpl.cpp  EnumRasterFolderImpl.cpp  EnumRasterImpl.cpp  FeatureClassPgs.cpp  FeatureCursorPgs.cpp  FeatureCursorStatic.cpp  FeatureInsertCommandPgs.cpp  FeatureObj.cpp  FeaturePgs.cpp  Makefile.am  RasterDatasetImpl.cpp  RasterFolderImpl.cpp  ResultSetPgs.cpp  SQLBuilder.cpp  WorkspacePgs.cpp
Engine/Data/GPostgres/test/: Makefile.am  (+12 more)
Engine/Filter/src/: ArithmeticExpressionImpl.cpp  BBoxFilterImpl.cpp  BinaryComparisonFilterImpl.cpp  BinaryLogicFilterImpl.cpp  BinarySpatialFilterImpl.cpp  DistanceBufferFilterImpl.cpp  EnumExpressionImpl.cpp  EnumFilterImpl.cpp  FilterFactoryImpl.cpp  FilterReaderImpl.cpp  FunctionImpl.cpp  IDFilterImpl.cpp  IsBetweenFilterImpl.cpp  IsLikeFilterImpl.cpp  IsNullFilterImpl.cpp  LiteralImpl.cpp  Makefile.am  OrderByImpl.cpp  PropertyNameImpl.cpp  QueryImpl.cpp  UnaryLogicFilterImpl.cpp
Engine/Processor/rtest/: Makefile.am  main.cpp  rtest.sln  rtest.vcxproj
Engine/Processor/src/: ArchiveProcessorImpl.cpp  CsvImportProcessorImpl.cpp  DBScan.cpp  DBScanProcessorImpl.cpp  Delaunay.cpp  DelaunayProcessorImpl.cpp  DemAspectProcessorImpl.cpp  DemHillshadeProcessorImpl.cpp  DemInundationProcessorImpl.cpp  DemSlopeProcessorImpl.cpp  FeatureClipImpl.cpp  FeatureExportProcessorImpl.cpp  FeatureIDWProcessorImpl.cpp  FeatureImportProcessorImpl.cpp  FeatureProjectProcessorImpl.cpp  FileSytemTileStoreGeneratorImpl.cpp  GoogleCRS84QuadTileStoreGeneratorImpl.cpp  GridPointGeneratorImpl.cpp  IDWProcessorImpl.cpp  Kmean.cpp  KmeanProcessorImpl.cpp  LineToPointsProcessorImpl.cpp  Makefile.am  MongoTileStoreGenerator.cpp  MultiPointToPointsProcessorImpl.cpp  PolygonToLinieProcessorImpl.cpp  PolygonToPointsProcessorImpl.cpp  ProcessorFactoryImpl.cpp  RandomPointsGeneratorImpl.cpp  RandomPointsInPolygonGeneratorImpl.cpp  RasterClipProcessorImpl.cpp  RasterEdgeDetectProcessorImpl.cpp  RasterExtractByRectangleProcessorImpl.cpp  RasterFormatConvertToJPEGProcessorImpl.cpp  RasterGraylizeProcessorImpl.cpp  RasterHistogramEqualizationProcessorImpl.cpp  RasterMosiacProcessorImpl.cpp  RasterPenEffectProcessorImpl.cpp  RasterPixelBlendProcessorImpl.cpp  RasterProjectProcessorImpl.cpp  (+12 more)
Engine/Raster/src/: Makefile.am  RasterBandImpl.cpp  RasterFactoryImpl.cpp  RasterIOImpl.cpp  RasterImpl.cpp
Engine/Server/auth/: GServer.cpp  GServer.h  Makefile.am
Engine/Server/ims/: GServer.cpp  GServer.h  Makefile.am  ims.cpp
Engine/Service/mgr/: Makefile.am  main.cpp
Engine/User/src/: EnumRoleImpl.cpp  EnumUserImpl.cpp  Makefile.am  RoleImpl.cpp  UserImpl.cpp  UserManagerImpl.cpp
include/: AugeCarto.h  AugeCore.h  AugeData.h  AugeFeature.h  AugeField.h  AugeFilter.h  AugeGeometry.h  AugeLineSymbol.h  AugeMarkerSymbol.h  AugeObject.h  AugeProcessor.h  AugeRaster.h  AugeRegionSymbol.h  AugeRenderer.h  AugeService.h  AugeStyle.h  AugeSymbol.h  AugeTile.h  AugeType.h  AugeUser.h  AugeWebCore.h  AugeWebEngine.h  AugeXML.h  Makefile.am  wkb.h
(+1572 files in other folders)
