AUTOMAKE_OPTION=foreign
include_HEADERS=AugeCarto.h \
		AugeData.h \
		AugeField.h \
		AugeGeometry.h \
		AugeRenderer.h \
		AugeStyle.h  \
		AugeSymbol.h \
		AugeMarkerSymbol.h \
		AugeLineSymbol.h \
		AugeRegionSymbol.h \
		AugeWebCore.h \
		AugeXML.h  \
		wkb.h \
		AugeCore.h \
		AugeFeature.h \
		AugeFilter.h \
		AugeObject.h \
		AugeService.h \
		AugeType.h \
		AugeWebEngine.h \
		AugeRaster.h
